// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders / page unchanged 1`] = `
<div>
  <main>
    <section
      class="hero text-light"
      id="hero-section"
    >
      <div
        class="content"
      >
        <h1
          class="title ff-serif"
        >
          Great coffee made simple.
        </h1>
        <p
          class="description fw-300"
        >
          Start your mornings with the world's best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
        </p>
        <a
          class="btn bg-primary ff-serif text-light"
          href="/create-plan"
          role="button"
        >
          Create your plan
        </a>
      </div>
    </section>
    <section
      class="products"
    >
      <header
        class="header"
      >
        <h2
          class="title ff-serif lowercase"
        >
          Our Collection
        </h2>
      </header>
      <ul
        class="productList flex"
      >
        <li
          class="productItem"
        >
          <div
            class="productCard flex"
          >
            <img
              alt="Gran Espresso product"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <div>
              <h3
                class="productName ff-serif"
              >
                Gran Espresso
              </h3>
              <p
                class="productDescription"
              >
                Light and flavorful blend with cocoa and black pepper for an intense experience.
              </p>
            </div>
          </div>
        </li>
        <li
          class="productItem"
        >
          <div
            class="productCard flex"
          >
            <img
              alt="Planalto product"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <div>
              <h3
                class="productName ff-serif"
              >
                Planalto
              </h3>
              <p
                class="productDescription"
              >
                Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.
              </p>
            </div>
          </div>
        </li>
        <li
          class="productItem"
        >
          <div
            class="productCard flex"
          >
            <img
              alt="Piccollo product"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <div>
              <h3
                class="productName ff-serif"
              >
                Piccollo
              </h3>
              <p
                class="productDescription"
              >
                Mild and smooth blend featuring notes of toasted almond and dried cherry.
              </p>
            </div>
          </div>
        </li>
        <li
          class="productItem"
        >
          <div
            class="productCard flex"
          >
            <img
              alt="Danche product"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <div>
              <h3
                class="productName ff-serif"
              >
                Danche
              </h3>
              <p
                class="productDescription"
              >
                Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
              </p>
            </div>
          </div>
        </li>
      </ul>
    </section>
    <section
      class="features"
    >
      <div
        class="wrapper"
      >
        <header
          class="header"
        >
          <h2
            class="title ff-serif"
          >
            Why choose us?
          </h2>
          <p
            class="description"
          >
            A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.
          </p>
        </header>
      </div>
      <ul
        class="featureList"
      >
        <li
          class="featureItem"
        >
          <div
            class="featureCard flex"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <div
              class="featureContent"
            >
              <h3
                class="featureTitle ff-serif"
              >
                Best quality
              </h3>
              <p
                class="featureDescription"
              >
                Discover an endless variety of the world’s best artisan coffee from each of our roasters.
              </p>
            </div>
          </div>
        </li>
        <li
          class="featureItem"
        >
          <div
            class="featureCard flex"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <div
              class="featureContent"
            >
              <h3
                class="featureTitle ff-serif"
              >
                Exclusive benefits
              </h3>
              <p
                class="featureDescription"
              >
                Special offers and swag when you subscribe, including 30% off your first shipment.
              </p>
            </div>
          </div>
        </li>
        <li
          class="featureItem"
        >
          <div
            class="featureCard flex"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <div
              class="featureContent"
            >
              <h3
                class="featureTitle ff-serif"
              >
                Free shipping
              </h3>
              <p
                class="featureDescription"
              >
                We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
              </p>
            </div>
          </div>
        </li>
      </ul>
    </section>
    <section
      class="howItWorks"
    >
      <div
        class="stepsWrapper light"
      >
        <div
          class="header"
        >
          <h2
            class="title ff-serif fs-450 text-neutral"
          >
            How it works
          </h2>
        </div>
        <ol
          class="stepsList"
        >
          <li
            class="stepItem light"
          >
            <span
              class="circle"
            />
            <div
              class="stepContent"
            >
              <div
                class="stepNumber ff-serif fs-700"
              >
                01
              </div>
              <h3
                class="stepTitle ff-serif"
              >
                Pick your coffee
              </h3>
              <p
                class="stepDescription"
              >
                Select from our evolving range of artisan coffees. Our beans are ethically sourced, and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.
              </p>
            </div>
          </li>
          <li
            class="stepItem light"
          >
            <span
              class="circle"
            />
            <div
              class="stepContent"
            >
              <div
                class="stepNumber ff-serif fs-700"
              >
                02
              </div>
              <h3
                class="stepTitle ff-serif"
              >
                Choose the frequency
              </h3>
              <p
                class="stepDescription"
              >
                Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.
              </p>
            </div>
          </li>
          <li
            class="stepItem light"
          >
            <span
              class="circle"
            />
            <div
              class="stepContent"
            >
              <div
                class="stepNumber ff-serif fs-700"
              >
                03
              </div>
              <h3
                class="stepTitle ff-serif"
              >
                Receive and enjoy!
              </h3>
              <p
                class="stepDescription"
              >
                We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.
              </p>
            </div>
          </li>
        </ol>
      </div>
      <div
        class="ctaBtn"
      >
        <a
          class="btn bg-primary ff-serif text-light"
          href="/create-plan"
          role="button"
        >
          Create your plan
        </a>
      </div>
    </section>
  </main>
</div>
`;

exports[`renders /about page unchanged 1`] = `
<div>
  <main>
    <section
      class="hero text-light"
      id="hero-section"
    >
      <div
        class="content"
      >
        <h1
          class="title ff-serif"
        >
          About us
        </h1>
        <p
          class="description fw-300"
        >
          Coffeeroasters began its journey of exotic discovery in 1999,  highlighting stories of coffee from around the world.  We have since been dedicated to bring the perfect cup  - from bean to brew - in every shipment.
        </p>
      </div>
    </section>
    <section
      class="commitment"
      id="commitment"
    >
      <picture>
        <source
          media="(min-width: 992px)"
          srcset="/img.jpg"
        />
        <source
          media="(min-width: 768px)"
          srcset="/img.jpg"
        />
        <img
          alt="A barista carefully doing coffee art"
          class="image"
          data-nimg="1"
          decoding="async"
          height="40"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
          style="color: transparent;"
          width="40"
        />
      </picture>
      <div
        class="content"
      >
        <h2
          class="title ff-serif"
        >
          Our commitment
        </h2>
        <p
          class="description"
        >
          We’re built on a simple mission and a commitment to doing good along the way. We want to make it easy for you to discover and brew the world’s best coffee at home. It all starts at the source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying to understand the challenges and opportunities in each of these places. We collaborate with exceptional coffee growers and empower a global community of farmers through with well above fair-trade benchmarks. We also offer training, support farm community initiatives, and invest in coffee plant science. Curating only the finest blends, we roast each lot to highlight tasting profiles distinctive to their native growing region.
        </p>
      </div>
    </section>
    <section
      class="quality"
    >
      <picture>
        <source
          media="(min-width: 1280px)"
          srcset="/img.jpg"
        />
        <source
          media="(min-width: 768px)"
          srcset="/img.jpg"
        />
        <img
          alt="A coffee cup with latte art being grabbed by a hand"
          class="image"
          data-nimg="1"
          decoding="async"
          height="40"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
          style="color: transparent;"
          width="40"
        />
      </picture>
      <div
        class="wrapper"
      >
        <div
          class="content"
        >
          <h2
            class="title ff-serif"
          >
            Uncompromising quality
          </h2>
          <p
            class="description"
          >
            Although we work with growers who pay close attention to all stages of harvest and processing, we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.
          </p>
        </div>
      </div>
    </section>
    <section
      class="locations"
    >
      <h2
        class="title ff-serif"
      >
        Our headquarters
      </h2>
      <ul
        class="countries"
      >
        <li
          class="countryCard"
        >
          <div
            class="imageWrapper"
          >
            <img
              alt="Country of The United Kingdom"
              class="countryImage"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
          </div>
          <div
            class="countryInfo"
          >
            <h3
              class="countryName ff-serif"
            >
              United Kingdom
            </h3>
            <div
              class="locationInfo"
            >
              <p>
                68 Asfordby Rd
              </p>
              <p>
                Alcaston
              </p>
              <p>
                SY6 1YA
              </p>
              <p>
                +44 1241 918425
              </p>
            </div>
          </div>
        </li>
        <li
          class="countryCard"
        >
          <div
            class="imageWrapper"
          >
            <img
              alt="Country of Canada"
              class="countryImage"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
          </div>
          <div
            class="countryInfo"
          >
            <h3
              class="countryName ff-serif"
            >
              Canada
            </h3>
            <div
              class="locationInfo"
            >
              <p>
                1528 Eglinton Avenue
              </p>
              <p>
                Toronto
              </p>
              <p>
                Ontario M4P 1A6
              </p>
              <p>
                +1 416 485 2997
              </p>
            </div>
          </div>
        </li>
        <li
          class="countryCard"
        >
          <div
            class="imageWrapper"
          >
            <img
              alt="Country of Australia"
              class="countryImage"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
          </div>
          <div
            class="countryInfo"
          >
            <h3
              class="countryName ff-serif"
            >
              Australia
            </h3>
            <div
              class="locationInfo"
            >
              <p>
                36 Swanston Street
              </p>
              <p>
                Kewell
              </p>
              <p>
                Victoria
              </p>
              <p>
                +61 4 9928 3629
              </p>
            </div>
          </div>
        </li>
      </ul>
    </section>
  </main>
</div>
`;

exports[`renders /create-plan page unchanged 1`] = `
<div>
  <main>
    <section
      class="hero text-light"
      id="hero-section"
    >
      <div
        class="content"
      >
        <h1
          class="title ff-serif"
        >
          Create plan
        </h1>
        <p
          class="description fw-300"
        >
          Coffee the way you wanted it to be. For coffee delivered tomorrow, or next week.  For whatever brew method you use. For choice, for convenience, for quality.
        </p>
      </div>
    </section>
    <section
      class="instructions"
    >
      <div
        class="stepsWrapper dark"
      >
        <ol
          class="stepsList"
        >
          <li
            class="stepItem dark"
          >
            <span
              class="circle"
            />
            <div
              class="stepContent"
            >
              <div
                class="stepNumber ff-serif fs-700"
              >
                01
              </div>
              <h3
                class="stepTitle ff-serif"
              >
                Pick your coffee
              </h3>
              <p
                class="stepDescription"
              >
                Select from our evolving range of artisan coffees. Our beans are ethically sourced, and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.
              </p>
            </div>
          </li>
          <li
            class="stepItem dark"
          >
            <span
              class="circle"
            />
            <div
              class="stepContent"
            >
              <div
                class="stepNumber ff-serif fs-700"
              >
                02
              </div>
              <h3
                class="stepTitle ff-serif"
              >
                Choose the frequency
              </h3>
              <p
                class="stepDescription"
              >
                Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.
              </p>
            </div>
          </li>
          <li
            class="stepItem dark"
          >
            <span
              class="circle"
            />
            <div
              class="stepContent"
            >
              <div
                class="stepNumber ff-serif fs-700"
              >
                03
              </div>
              <h3
                class="stepTitle ff-serif"
              >
                Receive and enjoy!
              </h3>
              <p
                class="stepDescription"
              >
                We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.
              </p>
            </div>
          </li>
        </ol>
      </div>
    </section>
  </main>
</div>
`;
